# RosettaEval

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
easyeval/: template_loader.py
easyeval/.ipynb_checkpoints/: utils-checkpoint.py
easyeval/tasks/medmcqa/: demo.ipynb
easyeval/tasks/medmcqa/.ipynb_checkpoints/: medmcqa_task-checkpoint.py
easyeval/tasks/medmcqa/cot/: cot_v0.jinja  prompt.jinja
easyeval/tasks/medmcqa/few_shots/: Untitled.ipynb
notebooks/: Untitled.ipynb  demo.ipynb  demo_prompts.ipynb  fewshots_examples.ipynb
rosetta_eval/: __init__.py  utils.py
rosetta_eval/loader/: __init__.py  factory.py  models.py
rosetta_eval/loader/adapters/: __init__.py  base.py  medmcqa.py  medqa.py
rosetta_eval/tasks/medmcqa/: medmcqa_task.py
rosetta_eval/tasks/medmcqa/cot/: examples.json
rosetta_eval/tasks/medmcqa/few_shots/: examples.json
rosettaeval/: __init__.py
rosettaeval/loader/: factory.py  models.py  types.py  utils.py
rosettaeval/loader/tasks/: __init__.py  adapter.py  base.py  decorators.py  models.py  template.py  types.py
rosettaeval/loader/tasks/medmcqa/: base.py  (+1 more)
rosettaeval/tasks/medmcqa/: medmcqa_task.py
rosettaeval/tasks/medqa/: medqa_task.py
rosettaeval/tasks/mmlu_anatomy/: mmlu_anatomy_task.py
rosettaeval/tasks/mmlu_cb/: mmlu_cb_task.py
rosettaeval/tasks/mmlu_ck/: mmlu_ck_task.py
rosettaeval/tasks/mmlu_cm/: mmlu_cm_task.py
rosettaeval/tasks/mmlu_mg/: mmlu_mg_task.py
rosettaeval/tasks/mmlu_pm/: mmlu_pm_task.py
rosettaeval/tasks/pubmedqa/: pubmedqa_task.py
tests/loader/: test_factory.py
(+23 files in other folders)
