[tool.poetry]
name = "rosettaeval"
version = "0.1.0"
description = ""
authors = ["Andreas Geert Motzfeldt <andreas@motzfeldt.dk>"]
readme = "README.md"
packages = [
    { include = "rosettaeval", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"
datasets = "^2.17.0"
Jinja2 = "^3.1.3"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pre-commit = "^3.6.0"
ruff = "^0.2.1"
pyright = "^1.1.350"
pytest-asyncio = "^0.23.5"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "basic"